--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "electron-builder": "^24.6.4"
   },
   "build": {
-    "icon": "assets/icons/icon_256.ico",
+    "icon": "assets/icons/icon_512.icns",
     "productName": "PacMan",
     "win": {
       "target": "nsis"
